Added ompss-at-fpga-kernel-module submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "xtasks"]
 	path = xtasks
 	url = ../xtasks.git
+[submodule "ompss-at-fpga-kernel-module"]
+	path = ompss-at-fpga-kernel-module
+	url = ../ompss-at-fpga-kernel-module.git
